--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,4 +64,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/sr
 
 target_link_libraries(${PROJECT_NAME} PUBLIC 
 	glfw
+    glm
 )
