extensions and layers (basic)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,12 @@ src/main.cpp
 src/Window/Window.hpp
 src/Window/Window.cpp
 
+src/VulkanAPI/VulkanBackend.hpp
+
+src/VulkanAPI/VulkanInstance.cpp
+src/VulkanAPI/VulkanExtension.cpp
+
+src/VulkanAPI/VulkanApp.hpp
+src/VulkanAPI/VulkanApp.cpp
+
 PARENT_SCOPE)
