vulkan devices and queue families

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ src/Vulkan/VulkanBackend.hpp
 
 src/Vulkan/VulkanInstance.cpp
 src/Vulkan/VulkanExtension.cpp
+src/Vulkan/VulkanDevice.cpp
 src/Vulkan/VulkanDebug.cpp
 
 src/Vulkan/VulkanApp.hpp
