--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ src/Vulkan/VulkanBackend.hpp
 src/Vulkan/VulkanInstance.cpp
 src/Vulkan/VulkanExtension.cpp
 src/Vulkan/VulkanGraphics.cpp
+src/Vulkan/VulkanShaders.cpp
 src/Vulkan/VulkanWindow.cpp
 src/Vulkan/VulkanDevice.cpp
 src/Vulkan/VulkanDebug.cpp
