a desperate call for help

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,7 @@ set(SOURCES
 src/main.cpp
 
 src/Window/Window.hpp
-src/Window/GLFWwindow.hpp
-src/Window/GLFWwindow.cpp
+src/Window/Window.cpp
 
 src/Vulkan/VulkanBackend.hpp
 
