--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@ set(SOURCES
 
 src/main.cpp
 
+src/FileSystem/FileSystem.hpp
+src/FileSystem/FileSystem.cpp
+
 src/Window/Window.hpp
 src/Window/Window.cpp
 
@@ -10,6 +13,7 @@ src/Vulkan/VulkanBackend.hpp
 src/Vulkan/VulkanInstance.cpp
 src/Vulkan/VulkanExtension.cpp
 src/Vulkan/VulkanGraphics.cpp
+src/Vulkan/VulkanBuffers.cpp
 src/Vulkan/VulkanShaders.cpp
 src/Vulkan/VulkanDevice.cpp
 src/Vulkan/VulkanDebug.cpp
