--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ src/main.cpp
 src/FileSystem/FileSystem.hpp
 src/FileSystem/FileSystem.cpp
 
+src/Logger/Logger.hpp
+src/Logger/Logger.cpp
+
 src/Window/Window.hpp
 src/Window/Window.cpp
 
