--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/sr
 target_link_libraries(${PROJECT_NAME} PUBLIC 
 	glfw
     glm
+    spdlog
     ${Vulkan_LIBRARIES}
     Vulkan::shaderc_combined
 )
