--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,9 +4,11 @@ set(GLFW_BUILD_EXAMPLES OFF)
 
 add_subdirectory(glfw)
 add_subdirectory(glm)
+add_subdirectory(spdlog)
 
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
     glfw/include
     glm
+    spdlog/include
     ${Vulkan_INCLUDE_DIRS}
 )
