--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ set(GLFW_BUILD_EXAMPLES OFF)
 add_subdirectory(glfw)
 add_subdirectory(glm)
 add_subdirectory(spdlog)
+add_subdirectory(LLGL)
 
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
     glfw/include
