remove other stuff

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,35 +1,15 @@
+add_subdirectory(RENDERING)
+
 set(SOURCES
 
 src/main.cpp
 
-src/FileSystem/FileSystem.hpp
-src/FileSystem/FileSystem.cpp
+${RENDERING}
 
 src/Logger/Logger.hpp
 src/Logger/Logger.cpp
 
 src/Window/Window.hpp
 src/Window/Window.cpp
-
-src/Rendering/LLGL/include/LLGLApp.hpp
-src/Rendering/LLGL/include/LLGLRenderer.hpp
-
-src/Rendering/LLGL/LLGLRenderer.cpp
-src/Rendering/LLGL/LLGLApp.cpp
-
-src/Rendering/Vulkan/VulkanBackend.hpp
-
-src/Rendering/Vulkan/VulkanInstance.cpp
-src/Rendering/Vulkan/VulkanExtension.cpp
-src/Rendering/Vulkan/VulkanGraphics.cpp
-src/Rendering/Vulkan/VulkanBuffers.cpp
-src/Rendering/Vulkan/VulkanShaders.cpp
-src/Rendering/Vulkan/VulkanDevice.cpp
-src/Rendering/Vulkan/VulkanDebug.cpp
-
-src/Rendering/Vulkan/VulkanUtils.hpp
-
-src/Rendering/Vulkan/VulkanApp.hpp
-src/Rendering/Vulkan/VulkanApp.cpp
 
 PARENT_SCOPE)
