--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,19 +68,13 @@ endif()
 
 add_subdirectory(lib)
 
-# Tell BGFX if we're doing debug or release. Important!
-if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
-	add_compile_definitions(BX_CONFIG_DEBUG=1)
-else()
-	add_compile_definitions(BX_CONFIG_DEBUG=0)
-endif()
-
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC 
 	glfw
     glm
     spdlog
+    bgfx
 )
 
 add_custom_command(TARGET VulkanIntro POST_BUILD
