--- a/src/Rendering/CMakeLists.txt
+++ b/src/Rendering/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(RENDERING
 
 src/Rendering/RenderShader.hpp
+src/Rendering/RenderShader.cpp
 
 src/Rendering/RenderEngine.hpp
 src/Rendering/RenderEngine.cpp
